Fixed thecity temperature overlap

--- a/src/css files/weather.css
+++ b/src/css files/weather.css
@@ -55,14 +55,14 @@
 }
 
 #content_temp {
-    width: 12rem;
+    width: 15rem;
     font-size: 6rem;
     font-weight: 800;
 }
 
 #content_city_date {
     margin-top: auto;
-    padding-left: 0.2rem;
+    padding-left: 1rem;
 }
 
 #content_city {
